# epd-waveshare-esp-idf-hal

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: interface.rs  lib.rs  traits.rs
src/epd1in54/: mod.rs
src/epd1in54_v2/: mod.rs
src/epd1in54b/: mod.rs
src/epd1in54c/: mod.rs
src/epd2in13_v2/: mod.rs
src/epd2in13bc/: mod.rs
src/epd2in7b/: mod.rs
src/epd2in9/: mod.rs
src/epd2in9_v2/: mod.rs
src/epd2in9bc/: mod.rs
src/epd3in7/: mod.rs
src/epd4in2/: mod.rs
src/epd5in65f/: mod.rs
src/epd5in83b_v2/: mod.rs
src/epd7in5/: mod.rs
src/epd7in5_hd/: mod.rs
src/epd7in5_v2/: mod.rs
src/epd7in5_v3/: mod.rs
src/epd7in5b_v2/: mod.rs
