[package]
authors = ["Christoph Groß <caemor@mailbox.org>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "An esp-idf-hal based driver for ePaper displays from Waveshare forked from epd-waveshare"
documentation = "https://docs.rs/epd-waveshare"
homepage = "https://github.com/caemor/epd-waveshare"
keywords = ["ePaper", "Display", "epd", "eink"]
license = "ISC"
name = "epd-waveshare"
readme = "README.md"
repository = "https://github.com/Caemor/epd-waveshare.git"
version = "0.5.0"
edition = "2021"

[badges]
# travis-ci = { repository = "caemor/epd-waveshare" }

[features]

# Remove the linux-dev feature to build the tests on non unix systems
default = ["all", "hal", "esp-idf-sys/native", "graphics", "linux-dev", "epd2in13_v3"]


pio = ["esp-idf-sys/pio"]
all = ["std", "nightly", "experimental", "embassy"]
hal = ["esp-idf-hal", "embedded-svc", "esp-idf-svc"]
std = ["alloc", "esp-idf-sys/std", "esp-idf-sys/binstart", "embedded-svc?/std", "esp-idf-hal?/std", "esp-idf-svc?/std"]
alloc = ["embedded-svc?/alloc", "esp-idf-hal?/alloc", "esp-idf-svc?/alloc"]
nightly = ["embedded-svc?/nightly", "esp-idf-svc?/nightly"] # Future: "esp-idf-hal?/nightly"
experimental = ["embedded-svc?/experimental", "esp-idf-svc?/experimental"]
embassy = ["esp-idf-hal?/embassy-sync", "esp-idf-hal?/critical-section", "esp-idf-hal?/edge-executor", "esp-idf-svc?/embassy-time-driver", "esp-idf-svc?/embassy-time-isr-queue"]

graphics = ["embedded-graphics-core"]
epd2in13_v2 = []
epd2in13_v3 = []
linux-dev = []

# Offers an alternative fast full lut for type_a displays, but the refreshed screen isnt as clean looking
type_a_alternative_faster_lut = []

[dependencies]
embedded-graphics-core = { version = "0.3.2", optional = true}
bit_field = "0.10.1"
esp-idf-sys = { version = "0.33", default-features = false }
esp-idf-hal = { version = "0.41", optional = true, default-features = false }
esp-idf-svc = { version = "0.46", optional = true, default-features = false }
embedded-hal = "=1.0.0-alpha.10"
embedded-svc = { version = "0.25", optional = true, default-features = false }

[build-dependencies]
embuild = "0.31.2"

[dev-dependencies]
embedded-graphics = "0.7.1"

embedded-hal-mock = "0.8"

[target.'cfg(unix)'.dev-dependencies]
linux-embedded-hal = "0.3"

[[example]]
name = "epd1in54_no_graphics"
required-features = ["linux-dev"]

[[example]]
name = "epd2in13_v2"
required-features = ["linux-dev"]

[[example]]
name = "epd2in13bc"
required-features = ["linux-dev"]

[[example]]
name = "epd4in2_variable_size"
required-features = ["linux-dev"]

[[example]]
name = "epd4in2"
required-features = ["linux-dev"]
